[package]
name = "unwind_aborts"
version = "0.1.1"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
description = "Prevent your panics from unwinding past FFI boundaries with this one simple trick!"
readme = "README.md"
repository = "https://github.com/agausmann/unwind_aborts"
license = "MIT"
keywords = ["ffi", "panic", "unwind", "abort"]
categories = ["development-tools::ffi"]

[badges]
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
proc-macro2  = "1.0.9"
quote = "1.0.3"

[dependencies.syn]
version = "1.0.17"
features = [
    "full",
]
